frontend/src/App.css
html, body {
  background-color: #121212;
  color: white;
}

.stats-grid1 {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 10px;
  margin-bottom: 16px;
  font-size: 1.4rem;
}

.stats-grid2 {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 10px;
  margin-bottom: 10px;
  font-size: 1.4rem;
}

.stats-grid3 {
  margin-bottom: 10px;
  font-size: 1.4rem;
}

.controls {
  margin: 10px;
}

.controls button {
  margin: 5px;
  padding: 5px;
}

.navBar {
  font-size: 1.4rem;
  padding: 5px;
}

